# venda_ingressos

./: .gitignore  COMECE_AQUI.md  Cargo.toml  Dockerfile  GUIA_RAPIDO.md  README.md  README_COMPLETO.md  docker-compose.yml  init.sql  nginx.conf  setup.sh  test.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
src/: election.rs  main.rs  message.rs  node.rs  sync.rs
