[package]
name = "projeto-sd-2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }

# Novas dependências para o sistema de ingressos
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
